# pdfluent

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE.md  README.md  ROADMAP-1.0-BETA.md  ROADMAP-1.1.md  THIRD_PARTY.md  THIRD_PARTY_ATTRIBUTIONS.md  XFA_MIGRATIE_ANALYSE.md  architecture.md  compliance-overrides.json  compliance-report.json  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.js  verify-tauri-engine.js  verify-tauri-engine.ts  vite.config.ts  vitest.config.ts
.github/DISCUSSION_TEMPLATE/: feature-idea.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  compliance.yml  core-tests.yml  release.yml
compliance/: README.md  policy.json
docs/: app-store-metadata.md  download-page.md  launch-plan.md  native-rendering-debug-plan.md  viewer-next-phase-plan.md  viewer-rust-phase-1-plan.md  viewer-rust-phase-2-plan.md
scripts/: check-licenses.mjs  generate-ocr-model-manifest.mjs  generate-third-party.mjs  setup-ocr.sh  setup-pdfium.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.dev.plist  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/lib/: README.md
src-tauri/scripts/: ocr-models.manifest.json  paddle_ocr_bridge.py  requirements-ocr.txt  sign-windows.ps1
src-tauri/src/: lib.rs  licensing.rs  main.rs  ocr.rs  pdf_engine.rs
src/components/: AdminPanel.tsx  AnnotationToolbar.tsx  (+9 more)
tests/: annotation-extended-parity.test.ts  app-advanced-phase-actions.test.ts  app-comments-pane-parity.test.ts  app-delete-action.test.ts  app-dialog-system.test.ts  app-drop-open-guards.test.ts  app-e2ee-dialog.test.ts  app-enterprise-production-parity.test.ts  app-esign-workflow.test.ts  app-export-images-dialog.test.ts  app-image-dialog.test.ts  app-layout-ux.test.ts  app-native-parity-shortcuts.test.ts  app-operation-logging.test.ts  app-print-action.test.ts  app-protect-dialog.test.ts  app-recent-files.test.ts  app-redaction-dialog.test.ts  app-rotate-all-pages-action.test.ts  app-search-cache.test.ts  app-search.test.ts  app-settings.test.ts  app-sidebar-visibility.test.ts  app-sign-dialog.test.ts  app-signature-verification-enterprise.test.ts  app-split-action.test.ts  app-split-dialog-css.test.ts  app-stability-parity-actions.test.ts  app-structure-editor.test.ts  app-text-ocr-parity.test.ts  app-undo-redo-recovery.test.ts  app-watermark-dialog.test.ts  comments-lib.test.ts  compliance-tooling.test.ts  debug-log.test.ts  design-integration-css.test.ts  document-event-log.test.ts  document-structure.test.ts  docx.test.ts  e2ee.test.ts  (+268 more)
(+236 files in other folders)
