[package]
name = "pdfluent"
version = "0.1.0"
description = "The open-source PDF editor"
authors = ["PDFluent Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/pdfluent/pdfluent"
edition = "2021"

[lib]
name = "pdfluent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
