[package]
name = "pdfluent"
version = "1.0.0-beta.1"
description = "Privacy-first desktop PDF editor powered by the XFA Rust SDK"
authors = ["Innovation Trigger B.V."]
license = "Proprietary"
repository = "https://github.com/pdfluent/pdfluent"
edition = "2021"

[lib]
name = "pdfluent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5"
open = "5"

# XFA Rust SDK crates
pdf-engine = { path = "../../../XFA/crates/pdf-engine" }
pdf-forms = { path = "../../../XFA/crates/pdf-forms" }
pdf-annot = { path = "../../../XFA/crates/pdf-annot", features = ["write"] }
pdf-sign = { path = "../../../XFA/crates/pdf-sign" }
pdf-manip = { path = "../../../XFA/crates/pdf-manip", features = ["image-insert", "font-subset", "pdfa-convert"] }
pdf-compliance = { path = "../../../XFA/crates/pdf-compliance" }
pdf-extract = { path = "../../../XFA/crates/pdf-extract" }
pdf-redact = { path = "../../../XFA/crates/pdf-redact" }
pdf-docx = { path = "../../../XFA/crates/pdf-docx" }
pdf-xlsx = { path = "../../../XFA/crates/pdf-xlsx" }
pdf-pptx = { path = "../../../XFA/crates/pdf-pptx" }
pdf-invoice = { path = "../../../XFA/crates/pdf-invoice" }
xfa-license = { path = "../../../XFA/crates/xfa-license" }
lopdf = { path = "../../../XFA/crates/lopdf" }
pdf-syntax = { path = "../../../XFA/crates/pdf-syntax" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
